[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "project_name"
version = "0.0.1"
description = "I aim to identify key factors that influence passenger satisfaction or dissatisfaction. Using supervised machine learning algorithms covered in class, I will predict passenger satisfaction levels. The dataset is derived from an airline passenger satisfaction survey."
authors = [
  { name = "Korkrid Kyle Akepanidtaworn" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["project_name"]
force_sort_within_sections = true
